--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -3,19 +3,87 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
   margin: 0;
   padding: 0;
   border: 0;
@@ -24,29 +92,41 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
   display: block;
 }
 body {
   line-height: 1;
 }
-ol, ul {
+ol,
+ul {
   list-style: none;
 }
-blockquote, q {
+blockquote,
+q {
   quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content: '';
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
   content: none;
 }
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
-
 
 /*
   ========================================
@@ -56,7 +136,8 @@ table {
 body {
   background: #293f50;
   color: #888;
-  font: 300 16px/22px "Roboto", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 300 16px/22px "Roboto", "Open Sans", "Helvetica Neue", Helvetica, Arial,
+    sans-serif;
 }
 
 /*
@@ -69,8 +150,8 @@ body {
 *:before,
 *:after {
   -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 .container,
 .grid {
@@ -88,7 +169,7 @@ body {
   padding-right: 15px;
 }
 .col-1-3,
-.col-2-3  {
+.col-2-3 {
   display: inline-block;
   vertical-align: top;
 }
@@ -125,7 +206,7 @@ body {
 */
 
 .row,
-.row-alt{
+.row-alt {
   min-width: 960px;
 }
 .row {
@@ -146,10 +227,17 @@ body {
   ========================================
 */
 
-h1, h2, h3, h4 {
+h1,
+h2,
+h3,
+h4 {
   color: #648880;
 }
-h1, h3, h4, h5, p {
+h1,
+h3,
+h4,
+h5,
+p {
   margin-bottom: 22px;
 }
 h1 {
@@ -177,7 +265,8 @@ h5 {
 strong {
   font-weight: 400;
 }
-cite, em {
+cite,
+em {
   font-style: italic;
 }
 
@@ -212,11 +301,11 @@ p a {
   border-bottom: 1px solid #dfe2e5;
 }
 .primary-header a,
-  .primary-footer a {
+.primary-footer a {
   color: #fff;
-  }
-  .primary-header a:hover,
-  .primary-footer a:hover {
+}
+.primary-header a:hover,
+.primary-footer a:hover {
   color: #648880;
 }
 
@@ -232,7 +321,7 @@ p a {
   cursor: pointer;
   display: inline-block;
   font-weight: 400;
-  letter-spacing: .5px;
+  letter-spacing: 0.5px;
   margin: 0;
   text-transform: uppercase;
 }
@@ -245,7 +334,6 @@ p a {
   color: #648880;
 }
 
-
 /*
   ========================================
   Основной заголовок
@@ -257,7 +345,7 @@ p a {
   float: left;
   font-size: 48px;
   font-weight: 100;
-  letter-spacing: .5px;
+  letter-spacing: 0.5px;
   line-height: 44px;
   padding: 40px 0 22px 0;
   text-transform: uppercase;
@@ -269,7 +357,7 @@ p a {
 .primary-nav {
   font-size: 14px;
   font-weight: 400;
-  letter-spacing: .5px;
+  letter-spacing: 0.5px;
   text-transform: uppercase;
 }
 
@@ -334,7 +422,7 @@ p a {
   Спикеры
   ========================================
 */
-  
+
 .speaker-info {
   border: 1px solid #dfe2e5;
   border-radius: 5px;
@@ -349,7 +437,7 @@ p a {
   border-radius: 5px;
   display: block;
   margin-bottom: 22px;
-  max-width: 100%
+  max-width: 100%;
 }
 .speaker-info img {
   border-radius: 50%;
@@ -388,7 +476,8 @@ form {
 input,
 select,
 textarea {
-  font: 300 16px/22px "Roboto", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 300 16px/22px "Roboto", "Open Sans", "Helvetica Neue", Helvetica, Arial,
+    sans-serif;
 }
 .register-group label {
   color: #648880;
@@ -430,7 +519,7 @@ textarea {
   Расписание
   ========================================
 */
-  
+
 table {
   margin-bottom: 44px;
   width: 100%;
